--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A StarWars character databank built using react"
     />
     <meta name="author" content="Jesse K. Akorah" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
